--- a/styles/modals.css
+++ b/styles/modals.css
@@ -1,7 +1,7 @@
 .component-modal {
   width: 90%;
   height: 250px;
-  background: white;
+  background: var(--white);
   justify-self: center;
   border-radius: 15px;
   display: flex;
@@ -12,7 +12,7 @@
 .modal1 {
   width: 90%;
   height: 80%;
-  border: 1px solid rgb(226, 223, 225);
+  border: 1px solid var(--border-grey);
   display: flex;
   border-radius: 0.2rem;
   flex-direction: column;
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  border-bottom: 1px solid rgb(226, 223, 225);
+  border-bottom: 1px solid var(--border-grey);
 }
 
 .modal1-heading > h2 {
@@ -39,22 +39,22 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  border-bottom: 1px solid rgb(226, 223, 225);
+  border-bottom: 1px solid var(--border-grey);
 }
 
 .modal1-footer > button {
   padding: 0.5rem 1.5rem;
   font-size: 1rem;
   border: none;
-  background: #0069d9;
-  color: white;
+  background: var(--blue-std);
+  color: var(--white);
   border-radius: 5px;
 }
 
 .modal2 {
   width: 90%;
   height: 80%;
-  border: 1px solid rgb(226, 223, 225);
+  border: 1px solid var(--border-grey);
   display: flex;
   border-radius: 0.2rem;
   flex-direction: column;
@@ -68,7 +68,7 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  border-bottom: 1px solid rgb(226, 223, 225);
+  border-bottom: 1px solid var(--border-grey);
 }
 
 .modal2-heading > h2 {
@@ -83,7 +83,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-bottom: 1px solid rgb(226, 223, 225);
+  border-bottom: 1px solid var(--border-grey);
 }
 
 .modal2-content > input {
@@ -95,7 +95,7 @@
   padding: 0.5rem 1.5rem;
   font-size: 1rem;
   border: none;
-  background: #0069d9;
-  color: white;
+  background: var(--blue-std);
+  color: var(--white);
   border-radius: 5px;
 }
