--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -9,52 +9,49 @@
   align-items: center;
 }
 
-.primary {
+.btn {
   padding: 1.2rem 2.5rem;
   border-radius: 35px;
   border: none;
   font-size: 1.2rem;
-  background: rgb(7, 7, 65);
-  color: white;
   cursor: pointer;
+}
+
+.primary {
+  background: var(--blue-black);
+  color: var(--white);
 }
 
 .secondary {
-  padding: 1.2rem 2.5rem;
-  border-radius: 35px;
-  border: none;
+  background: var(--secondary-btn);
+  color: var(--blue-black);
+}
+
+.link {
+  padding: 1rem 2.5rem;
+  text-decoration: none;
+  color: var(--white);
   font-size: 1.2rem;
-  background: rgb(206, 206, 253);
-  color: rgb(7, 7, 65);
-  cursor: pointer;
+  border-radius: 15px;
+  pointer-events: none;
 }
 
 .primary-link {
-  background: rgb(59, 5, 5);
-  padding: 1rem 2.5rem;
-  text-decoration: none;
-  color: white;
-  font-size: 1.2rem;
+  background: var(--secondary-link);
   font-weight: 300;
-  border-radius: 15px;
-  pointer-events: none;
 }
 
 .secondary-link {
   padding: 1rem 2rem;
-  text-decoration: none;
-  color: rgb(59, 5, 5);
-  font-size: 1.2rem;
+  color: var(--secondary-link);
   font-weight: 400;
-  border-radius: 15px;
-  border: 1px solid rgb(59, 5, 5);
-  pointer-events: none;
+  border: 1px solid var(--secondary-link);
 }
 
 .slider {
   width: 130px;
   height: 30%;
-  background: yellowgreen;
+  background: var(--yellow-green);
   border-radius: 30px;
   position: relative;
   display: flex;
@@ -66,7 +63,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: white;
+  background: var(--white);
   transition: all 0.2s ease-in;
   cursor: pointer;
 }
@@ -76,7 +73,7 @@
 }
 
 .slider-inactive {
-  background: grey;
+  background: var(--grey);
 }
 
 .floating-action {
@@ -84,8 +81,8 @@
   border-radius: 50%;
   border: none;
   font-size: 2rem;
-  color: white;
-  background: rgb(2, 46, 2);
+  color: var(--white);
+  background: var(--sticky-btn);
   cursor: pointer;
   position: sticky;
 }
