--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,6 +1,6 @@
-.component-card1 {
+.component-card-1 {
   width: 80%;
-  background: white;
+  background: var(--white);
   display: flex;
   flex-direction: column;
   height: 400px;
@@ -10,49 +10,49 @@
   justify-self: center;
   position: relative;
 }
-.component-card1 > img {
+.component-card-1 > img {
   width: 70%;
   transform: rotateZ(-30deg);
   z-index: 2;
 }
 
-.component-card1 > i {
+.component-card-1 > i {
   margin-right: 1rem;
   align-self: flex-end;
-  color: red;
+  color: var(--red);
 }
 
-.component-card1 > h3 {
+.component-card-1 > h3 {
   font-size: 1.7rem;
 }
 
-.component-card1 > h5 {
-  color: grey;
+.component-card-1 > h5 {
+  color: var(--grey);
 }
 
-.component-card1-rating {
+.component-card-1-rating {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
 }
 
-.component-card1-stars > i {
+.component-card-1-stars > i {
   margin: 0.1rem;
-  color: rgb(158, 158, 14);
+  color: var(--pale-yellow);
 }
 
-.component-card1-rating > button {
+.component-card-1-rating > button {
   padding: 0.5rem;
   border: none;
-  background: rgb(1, 1, 46);
-  color: white;
+  background: var(--dark-blue);
+  color: var(--white);
   border-radius: 15px;
 }
 
 .product-bg {
   width: 300px;
   height: 150px;
-  background: rgb(207, 230, 3);
+  background: var(--bright-yellow);
   position: absolute;
   top: 15%;
   clip-path: circle();
@@ -62,9 +62,9 @@
 
 /* CSS FOR CARD 2 */
 
-.component-card2 {
+.component-card-2 {
   width: 80%;
-  background: white;
+  background: var(--white);
   height: 400px;
   border-radius: 15px;
   align-self: center;
@@ -72,18 +72,17 @@
   position: relative;
 }
 
-.component-card2 > img {
+.component-card-2 > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 15px;
 }
 
-.component-card2-desc {
+.component-card-2-desc {
   position: absolute;
   height: 100%;
   width: 100%;
-  /* z-index: 1; */
   top: 0;
   display: flex;
   flex-direction: column;
@@ -91,28 +90,28 @@
   align-items: flex-start;
 }
 
-.component-card2-top {
+.component-card-2-top {
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin: 1rem 0rem;
 }
 
-.component-card2-top > i {
+.component-card-2-top > i {
   margin-right: 1rem;
-  color: red;
+  color: var(--red);
 }
 
-.component-card2-top > p {
-  color: white;
-  background-color: palevioletred;
+.component-card-2-top > p {
+  color: var(--white);
+  background-color: var(--pale-violet-red);
   padding-right: 1rem;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
 
-.component-card2-bottom {
-  background-color: white;
+.component-card-2-bottom {
+  background-color: var(--white);
   align-self: center;
   margin-bottom: 1.5rem;
   width: 90%;
@@ -124,23 +123,23 @@
   justify-content: center;
 }
 
-.component-card2-bottom > h3 {
+.component-card-2-bottom > h3 {
   font-weight: 600;
   font-size: 1.3rem;
 }
 
-.component-card2-bottom > h5 {
+.component-card-2-bottom > h5 {
   font-weight: 500;
   font-size: 0.7rem;
 }
-.component-card2-bottom > small > span {
-  color: grey;
+.component-card-2-bottom > small > span {
+  color: var(--grey);
 }
 
 /* CSS FOR CARD 3 */
 
-.component-card3 {
-  background: linear-gradient(black, #171800);
+.component-card-3 {
+  background: linear-gradient(var(--black), var(--black-light));
   width: 80%;
   height: 400px;
   border-radius: 15px;
@@ -153,7 +152,7 @@
   overflow: hidden;
 }
 
-.component-card3 > img {
+.component-card-3 > img {
   position: absolute;
   top: 40%;
   width: 100%;
@@ -162,8 +161,8 @@
   opacity: 0.7;
 }
 
-.component-card3-top {
-  color: #9e9898;
+.component-card-3-top {
+  color: var(--grey-light);
   width: 80%;
   height: 30%;
   display: flex;
@@ -173,43 +172,43 @@
   margin-top: 1rem;
 }
 
-.component-card3-top > h5 {
+.component-card-3-top > h5 {
   font-size: 1.3rem;
 }
 
-.component-card3-top > h3 {
+.component-card-3-top > h3 {
   font-size: 1.6rem;
-  color: white;
+  color: var(--white);
   font-weight: 600;
 }
 
-.component-card3-top > p {
+.component-card-3-top > p {
   font-size: 0.8rem;
 }
 
-.component-card3-bottom {
+.component-card-3-bottom {
   width: 100%;
   display: flex;
   justify-content: center;
   z-index: 1;
 }
 
-.component-card3-bottom > button {
+.component-card-3-bottom > button {
   width: 20%;
   margin-bottom: 1rem;
-  background: rgb(245, 170, 9);
+  background: var(--mustard-yellow);
   border: none;
   padding: 0.5rem;
   border-radius: 1rem;
-  color: white;
+  color: var(--white);
   font-weight: 500;
 }
 
 /* CSS FOR CARD 4 */
 
-.component-card4 {
+.component-card-4 {
   width: 80%;
-  background: white;
+  background: var(--white);
   height: 400px;
   border-radius: 15px;
   align-self: center;
@@ -220,48 +219,48 @@
   padding: 1rem;
 }
 
-.component-card4 > img {
+.component-card-4 > img {
   width: 100%;
   height: 65%;
   object-fit: contain;
 }
 
-.component-card4 > h3 {
+.component-card-4 > h3 {
   font-weight: 600;
 }
 
-.component-card4-wishlist {
-  border: 1px solid rgb(187, 183, 183);
+.component-card-4-wishlist {
+  border: 1px solid var(--border-grey);
   padding: 0.5rem;
   background-color: transparent;
   font-weight: 600;
 }
 
-.component-card4 > h5 {
+.component-card-4 > h5 {
   font-weight: 600;
   font-size: 1rem;
 }
 
-.component-card4 > p {
+.component-card-4 > p {
   font-weight: 400;
   font-size: 0.8rem;
-  color: red;
+  color: var(--red);
 }
 
-.component-card4-cancel {
+.component-card-4-cancel {
   width: 10%;
   height: 10%;
   border-radius: 50%;
   align-self: flex-end;
-  border: 1px solid grey;
+  border: 1px solid var(--grey);
   background: transparent;
 }
 
 /* CSS FOR CARD 5 */
 
-.component-card5 {
+.component-card-5 {
   width: 80%;
-  background: linear-gradient(120deg, white, rgb(245, 80, 245));
+  background: linear-gradient(120deg, var(--white), var(--pink));
   height: 400px;
   border-radius: 15px;
   display: flex;
@@ -271,29 +270,29 @@
   padding: 1rem;
 }
 
-.component-card5-text {
+.component-card-5-text {
   width: 70%;
 }
 
-.component-card5-text > h2 {
+.component-card-5-text > h2 {
   margin-top: 1.5rem;
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 2.5rem;
 }
 
-.component-card5-text > h3 {
+.component-card-5-text > h3 {
   font-size: 2.5rem;
   font-weight: 200;
   line-height: 2rem;
 }
 
-.component-card5-text > p {
+.component-card-5-text > p {
   font-size: 0.7rem;
   margin-top: 2rem;
 }
 
-.component-card5 > button {
+.component-card-5 > button {
   padding: 0.5rem;
   width: 25%;
   align-self: flex-end;
@@ -306,9 +305,9 @@
 
 /* CSS FOR CARD 6 */
 
-.component-card6 {
+.component-card-6 {
   width: 80%;
-  background: rgb(26, 25, 25);
+  background: var(--black-light);
   height: 400px;
   border-radius: 15px;
   display: flex;
@@ -317,33 +316,33 @@
   justify-content: space-around;
   align-items: center;
   padding: 1rem;
-  color: white;
-  box-shadow: 5px 5px 40px green;
+  color: var(--white);
+  box-shadow: 5px 5px 40px var(--green);
 }
 
-.component-card6 > img {
+.component-card-6 > img {
   width: 100%;
   height: 40%;
   object-fit: contain;
 }
 
-.component-card6 > h2 {
+.component-card-6 > h2 {
   font-size: 2rem;
   width: 100%;
   font-weight: 500;
   line-height: 2.5rem;
 }
 
-.component-card6 > p {
+.component-card-6 > p {
   font-size: 0.8rem;
   font-weight: 200;
 }
 
-.component-card6 > button {
+.component-card-6 > button {
   padding: 0.5rem;
   border-radius: 15px;
   width: 40%;
   border: none;
-  background: #227e48;
-  color: white;
+  background: var(--grass-green);
+  color: var(--white);
 }
