--- a/styles/content.css
+++ b/styles/content.css
@@ -286,7 +286,7 @@
 
 .footer {
   width: 100%;
-  background: #a4a6a8;
+  background: #f5f7f9;
   height: 100px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
